refactoring openapi
